--- a/Labs/Alyssa_Giedd_Lab2.ipynb
+++ b/Labs/Alyssa_Giedd_Lab2.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -286,8 +286,8 @@
     "#enough to count photons so the readings are floating point brightnesses, not integer photons). \n",
     "#Calculate the significance of your detection. Can you claim a discovery (traditionally 5-sigma or more)?\n",
     "width = 8\n",
-    "signal = 15.5\n",
-    "x = np.linspace(-15, 15, 1000)\n",
+    "signal = 12.6\n",
+    "x = np.linspace(-13, 13, 1000)\n",
     "bg = stats.norm.pdf(x,loc = 0, scale =8)\n",
     "\n",
     "prob = stats.norm.cdf(12.6, loc = 0, scale = width)\n",
@@ -300,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
