--- a/Labs/Alyssa_Giedd_Lab3.ipynb
+++ b/Labs/Alyssa_Giedd_Lab3.ipynb
@@ -176,7 +176,7 @@
     "\n",
     "    Using a Poisson distribution of cosmic rays where expected value of 1 ray/minute, we can calculate the mean of the distribution by further using the fact that we are looking at 8 hours a day for 15 days to get an expected rate (lambda) of 7200 cosmic rays. This gives us the function: \n",
     "\n",
-    "    $PDF = \\int_0^{6800}\\frac{\\lambda^x}{x!}e^{-7200}dx $ \n",
+    "    $PDF = \\int_0^{6800}\\frac{7200^x}{x!}e^{-7200}dx $ \n",
     "\n",
     "3. Convert to sigma."
    ]
