--- a/Labs/Alyssa_Giedd_Lab5.ipynb
+++ b/Labs/Alyssa_Giedd_Lab5.ipynb
@@ -42,6 +42,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this lab we will be analyzing simulated data from a 2 proton collision in order to detect Higgs Boson signals. Particles are created after other parent particles are accelerated through a ring and collided. To explore the simulated data of the Large Hedron Collider we will plot each of the signal variables against their corresponding background (QCD) values. By plotting the QCD values against the signal values we can determine discrimination power and/or correlation between the two data sets. We specifically will be analyzing jets, a group of particles all moving in one same direction towards a detector. These jets originate from particle decay and allow us to examine the lifetime of a particle using 4 momentum. Because jets cannot be distinguished, we will be examining the decay of 2-3 prong jets and their relationship.\n",
+    "\n",
+    "Variables we will examine:\n",
+    "pt: transverse momentum (transverse to the direction of the beams)\n",
+    "\n",
+    "eta: pseudorapidity defined as $ ln(\\cot(\\frac{\\theta}{2})) $\n",
+    "\n",
+    "phi: azimuthal angle around beam\n",
+    "\n",
+    "mass: mass in GeV\n",
+    "\n",
+    "ee2: energy correlations between 2 jets\n",
+    "\n",
+    "ee3: energy correlations between 3 jets\n",
+    "\n",
+    "d2: two prong jet disriminant, calculated by $ (\\frac{ee_2}{ee_3})^3 $\n",
+    "\n",
+    "angularity: describes shape of the jet\n",
+    "\n",
+    "t1: (subjettiness) variance of detections for 1 branch coming from a jet\n",
+    "\n",
+    "t2: variance of detections for 2 branches coming from a jet\n",
+    "\n",
+    "t3: variance of detections for 3 branches coming from a jet\n",
+    "\n",
+    "t21: ratio of t2 and t1\n",
+    "\n",
+    "t32: ratio of t3 and t2\n",
+    "\n",
+    "KtDeltaR: size difference between two sub jets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
