--- a/Labs/Alyssa_Giedd_Lab7.ipynb
+++ b/Labs/Alyssa_Giedd_Lab7.ipynb
@@ -146,14 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Significance of 0.346 for a cut from 0.0 to 9000.0\n"
+      "Significance of 3.345 for a cut from 0.0 to 9000.0\n",
+      "Significance of inf for a cut from 9.0 to 1000000.0\n"
      ]
     }
    ],
@@ -164,8 +165,8 @@
     "    bkgd_slice = bkgd_n[lower:upper:1]\n",
     "    signal_slice = signal_n[lower:upper:1]\n",
     "    \n",
-    "    bkgd_avg = 2000 * len(bkgd_slice)/len(bkgd_n)\n",
-    "    signal_avg = 50 * len(signal_slice)/len(signal_n)\n",
+    "    bkgd_avg = 200000 * len(bkgd_slice)/len(bkgd_n)\n",
+    "    signal_avg = 5000 * len(signal_slice)/len(signal_n)\n",
     "    \n",
     "    p = (1-scipy.stats.poisson.cdf(bkgd_avg + signal_avg, bkgd_avg))\n",
     "    print('Significance of {0:1.3f} for a cut from {1:1.1f} to {2:1.1f}'.format(stats.norm.ppf(1-p),lower,upper))\n",
@@ -173,7 +174,7 @@
     "    return(signal_slice, bkgd_slice)\n",
     "\n",
     "signal_slice, bkgd_slice = slicer(0, 9000, 'mass', signal, background)\n",
-    "signal_slice, bkgd_slice = slicer(0, 9000, 'mass', signal, background)"
+    "signal_slice, bkgd_slice = slicer(0, 1000000, 'mass', signal, background)"
    ]
   },
   {
